--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body>
+   <body>
       <header class="header">
         <nav class="header__menu">
           <ul class="header__links-list">
@@ -40,9 +40,7 @@
              <p class="cover_subline">
                  Аукцион вещей, в которые никто не верил
              </p>
-            <button class="bet-button">
-              <p class="text__decoration">сделать ставку</p>
-            </button>
+            <button class="bet-button text__decoration">сделать ставку</button>
         </section>
         <section class="lots">
           <h2 class="lots__heading">лоты</h2> 
@@ -125,17 +123,16 @@
         </address>
         <nav class="footer__menu">
             <ul class="footer__menu-list">
-                <a class="footer__menu-link_active">главная</li>
-                <a class="footer__menu-list-item" href="#0">посмотреть лоты</li>
-                <a class="footer__menu-list-item" href="#0">об аукционе</li>
+                <li class="footer__menu-link_active">главная</li>
+                <li><a class="footer__menu-list-item" href="#0">посмотреть лоты</a></li>
+                <li><a class="footer__menu-list-item" href="#0">об аукционе</a></li>
             </ul>
         </nav>
         <ul class="footer__social-list">
-          <li class="ytub" href="#0"><img src="./images/yt.svg"></li>
-          <li class="vk" href="#0"><img src="./images/vk.svg"></li>
-          <li class="pinterest" href="#0"><img src="./images/pinterest.svg"></li>
+          <li><a class="ytub" href="#0"><img src="./images/yt.svg" alt="ytub"></a></li>
+          <li><a class="vk" href="#0"><img src="./images/vk.svg" alt="vk"></a></li>
+          <li><a class="pinterest" href="#0"><img src="./images/pinterest.svg" alt="pinterest"></a></li>
         </ul>
         </footer>
   </body>
-  <body></body>
 </html>
