project to test

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <address class="address">
       <a href="tel:+99995555555">+9 999 555 5555</a><br>
       <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-      <p>наб. Принсенграхт 263- <br>265, Амстердам</a>
+      <p>наб. Принсенграхт 263- <br>265, Амстердам</p>
     </address>
   </header>
   <main>
@@ -49,7 +49,7 @@
           <article class="card card_type_film">
             <div class="overlay"></div>
               <h3 class="card__title">Фильм режиссёра, который бросил
-                  киношколу</a></h3>
+                  киношколу</h3>
               <p class="card__text">Не просто бросил, а ушёл с первой лекции.
                 Какой была бы ваша ставка, если бы вы не знали, что
                 режиссёр — Пол Томас Андерсон?</p>
