--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <li><a class="lots__card-list-item" href="#0">
           <article class="card card_type_book">
             <div class="overlay"></div>
-              <h3 class="card__title"><a class="card-link" href="#0">Книга, где описан один скучный день из жизни
-                  рекламного агента</a></h3>
+              <h3 class="card__title">Книга, где описан один скучный день из жизни
+                  рекламного агента</h3>
               <p class="card__text">Объёмом почти в тысячу страниц.
                 Иногда без знаков препинания и с переходами на древнеанглийский.
                 В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы,
@@ -67,11 +67,11 @@
                 Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
           </article></a>
         </li>
-        <li><a class="lots__card-list-item">
+        <li><a class="lots__card-list-item" href="=#0">
           <article class="card card_type_picture">
             <div class="overlay"></div>
-              <h3 class="card__title"><a class="card-link" href="#0">Картина, которую повторит даже 5-летний сын маминой
-                  подруги</a></h3>
+              <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой
+                  подруги</h3>
               <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
                 похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на
                 такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
