--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <header class="header">
     <nav class="header__menu">
       <ul class="header__links-list">
-        <li> <a class="header__links-list-item header__link_active" href="#0">главная</a></li>
-        <li><a class="header__links-list-item" href="#0">посмотреть лоты</a></li>
-        <li><a class="header__links-list-item" href="#0">об аукционе</a></li>
+        <li class="header__links-list-item header__links-list-item_no-bullet"><a class="header__link_active" href="#0">главная</a></li>
+        <li class="header__links-list-item"><a class="header__link" href="#0">посмотреть лоты</a></li>
+        <li class="header__links-list-item"><a class="header__link" href="#0">об аукционе</a></li>
       </ul>
     </nav>
     <a class="header__logo">
@@ -25,7 +25,7 @@
     </a>
     <address class="address">
       <a href="tel:+99995555555">+9 999 555 5555</a><br>
-      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p>наб. Принсенграхт 263- <br>265, Амстердам</p>
     </address>
   </header>
@@ -114,20 +114,20 @@
   <footer class="footer">
     <address class="address">
       <a href="tel:+99995555555">+9 999 555 5555</a><br>
-      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p>наб. Принсенграхт 263- <br>265, Амстердам</p>
     </address>
     <nav class="footer__menu">
       <ul class="footer__menu-list">
-        <li class="footer__menu-link_active">главная</li>
+        <li><a class="footer__menu-link_active">главная</a></li>
         <li><a class="footer__menu-list-item" href="#0">посмотреть лоты</a></li>
         <li><a class="footer__menu-list-item" href="#0">об аукционе</a></li>
       </ul>
     </nav>
     <ul class="footer__social-list">
-      <li><a class="ytub" href="#0"><img src="./images/yt.svg" alt="ytub"></a></li>
-      <li><a class="vk" href="#0"><img src="./images/vk.svg" alt="vk"></a></li>
-      <li><a class="pinterest" href="#0"><img src="./images/pinterest.svg" alt="pinterest"></a></li>
+      <li><a href="#0"><img src="./images/yt.svg" alt="ytub"></a></li>
+      <li><a href="#0"><img src="./images/vk.svg" alt="vk"></a></li>
+      <li><a href="#0"><img src="./images/pinterest.svg" alt="pinterest"></a></li>
     </ul>
   </footer>
 </body>
