--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <header class="header">
     <nav class="header__menu">
       <ul class="header__links-list">
-        <li class="header__links-list-item header__links-list-item_no-bullet"><a class="header__link_active" href="#0">главная</a></li>
+        <li class="header__links-list-item header__links-list-item_no-bullet"><a class="header__link_active"
+            href="#0">главная</a></li>
         <li class="header__links-list-item"><a class="header__link" href="#0">посмотреть лоты</a></li>
         <li class="header__links-list-item"><a class="header__link" href="#0">об аукционе</a></li>
       </ul>
@@ -46,36 +47,39 @@
       <h2 class="lots__heading">лоты</h2>
       <ul class="lots__card-list">
         <li><a class="lots__card-list-item" href="#0">
-          <article class="card card_type_film">
-            <div class="overlay"></div>
+            <article class="card card_type_film">
+              <div class="overlay"></div>
               <h3 class="card__title">Фильм режиссёра, который бросил
-                  киношколу</h3>
+                киношколу</h3>
               <p class="card__text">Не просто бросил, а ушёл с первой лекции.
                 Какой была бы ваша ставка, если бы вы не знали, что
                 режиссёр — Пол Томас Андерсон?</p>
-          </article></a>
+            </article>
+          </a>
         </li>
         <li><a class="lots__card-list-item" href="#0">
-          <article class="card card_type_book">
-            <div class="overlay"></div>
+            <article class="card card_type_book">
+              <div class="overlay"></div>
               <h3 class="card__title">Книга, где описан один скучный день из жизни
-                  рекламного агента</h3>
+                рекламного агента</h3>
               <p class="card__text">Объёмом почти в тысячу страниц.
                 Иногда без знаков препинания и с переходами на древнеанглийский.
                 В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы,
                 начиная с античных времён. И это всё накладывается на эпическую поэму Гомера.
                 Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-          </article></a>
+            </article>
+          </a>
         </li>
         <li><a class="lots__card-list-item" href="=#0">
-          <article class="card card_type_picture">
-            <div class="overlay"></div>
+            <article class="card card_type_picture">
+              <div class="overlay"></div>
               <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой
-                  подруги</h3>
+                подруги</h3>
               <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
                 похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на
                 такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
-          </article></a>
+            </article>
+          </a>
         </li>
       </ul>
       <a class="lots__look-more-link" href="#0">посмотреть больше</a>
@@ -87,7 +91,7 @@
         </div>
         <article class="about__article">
           <h2 class="about__title">Об аукционе</h2>
-          <p class="about__text">Здесь вы не встретите
+          <p class="about__text_first">Здесь вы не встретите
             очередное пафосное собрание невероятно дорогого
             антиквариата. Наши лоты вообще не должны были
             попасть ни на один аукцион. Потому что кому
@@ -96,7 +100,7 @@
             нужны все эти странные вещи, созданные
             любителями?
           </p>
-          <p class="about__text">Слишком сложные или,
+          <p class="about__text_second">Слишком сложные или,
             наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками.
             Непринятые и непонятые. Когда-то они казались
