--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         <article class="about__article">
           <h2 class="about__title">Об аукционе</h2>
-          <p class="about__text_first">Здесь вы не встретите
+          <p class="about__text">Здесь вы не встретите
             очередное пафосное собрание невероятно дорогого
             антиквариата. Наши лоты вообще не должны были
             попасть ни на один аукцион. Потому что кому
@@ -100,7 +100,7 @@
             нужны все эти странные вещи, созданные
             любителями?
           </p>
-          <p class="about__text_second">Слишком сложные или,
+          <p class="about__text">Слишком сложные или,
             наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками.
             Непринятые и непонятые. Когда-то они казались
